2010-07-12  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/setup/setup.php: Updated year. Cleaned code.

	* godmode/alerts/alert_list.builder.php: Added link to create action.

2010-07-12  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/configure_alert_compound.php: fixed the page to request
	ajax, now it's new ajax page.
	Fixes: #3020713

2010-07-12  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_visual_console.js: in function "draw_line"
	changed the const 15 value to dinamic value half width of image.
	Fixes: #3019645
	
	* godmode/reporting/visual_console_builder.editor.js: cleaned source code
	and deleted unused function "eventsButtonsToolbox", this function was in
	old wip version of visual editor.

2010-07-12  Dario Rodriguez  <dario.rodriguez@artica.es>

	* godmode/reporting/visual_console_builder.php: fixed error getting
	image size creating a map without background
	Fixes: #3014276 

2010-07-12  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/ver_agente.php: re-ordered the tabs. 

2010-07-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php: fixed the
	reset of the size when change a visual map background

2010-07-12  Dario Rodriguez  <dario.rodriguez@artica.es>

	* operation/search_results.php: fixed bug in search with zero matches
	and filtering by: maps, reports or graphs.
	Fixes: #3025607

2010-07-12  Dario Rodriguez  <dario.rodriguez@artica.es>

	* operation/agentes/estado_agente.php: fixed bug with pagination offset
	and search.
	Fixes: #3014703

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/ver_agente.php: added hook to collection enterprise.

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_filemanager.php: added hash2 parameter for to use in
	directory navigation.

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_filemanager.php: cleaned source code. And added function